Install wheezy-backports kernel.

--- a/template/debian/http/preseed.cfg
+++ b/template/debian/http/preseed.cfg
@@ -50,6 +50,7 @@ d-i mirror/http/hostname string http.us.debian.org
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 d-i apt-setup/use_mirror boolean true
+d-i apt-setup/local0/repository string http://ftp.debian.org/debian wheezy-backports main
 # Don't send reports back to the project
 popularity-contest popularity-contest/participate boolean false
 # Package selection
@@ -65,3 +66,5 @@ d-i pkgsel/include string openssh-server ntp
 d-i preseed/early_command string sed -i \
   '/in-target/idiscover(){/sbin/discover|grep -v VirtualBox;}' \
   /usr/lib/pre-pkgsel.d/20install-hwpackages
+d-i preseed/late_command string in-target \
+  sudo apt-get install -y -t wheezy-backports linux-image-amd64
